# VibeCoding

./: .gitignore  .markdownlint.jsonc  .markdownlintignore  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  index.md  maintenance.md
docs/_static/: custom.css
docs/overview/: china-tools.md  comparison.md  landscape.md
docs/research/: sources.md  todo.md
docs/templates/: tool-review-template.md
docs/tools/: aider.md  amazon-q-developer.md  claude-code.md  cline.md  codebuddy.md  codeium.md  coderabbit.md  codex-cli.md  continue.md  cursor.md  github-copilot.md  google-antigravity.md  index.md  jetbrains-ai-assistant.md  opencode.md  qoder.md  qwen-code.md  sourcegraph-cody.md  tabby.md  trae.md  windsurf.md
