[project]
name = "vibecoding-docs"
version = "0.1.0"
description = "Sphinx + MyST documentation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "sphinx>=8.1,<9.0",
  "myst-parser>=4.0,<5.0",
]

[dependency-groups]
dev = [
  "esbonio>=0.16,<1.0",
]

[tool.uv]
package = false
